--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 
     <main>
         <h2>Blog Posts</h2>
-        <ul id="post-list"></ul> <!-- This will be populated by JavaScript -->
+        <ul id="post-list">
+            <!-- Each post will be listed here dynamically -->
+            <!-- For example: -->
+            <!-- <li><a href="/post/my-first-post">My First Post</a></li> -->
+        </ul>
     </main>
 
     <footer>
